creating dom elements

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <h1> Cows & Bulls!</h1>
 </header>
 <main>
+<div id="boxes"></div>
+
 <div class="section1"
 <form>
-<input type="text" id="num1" class="numbers" value="1">
-<input type="text" id="num2" class="numbers" value="2">
-<input type="text" id="num3" class="numbers" value="3">
-<input type="text" id="num4" class="numbers" value="4">
+<input type="text" id="num1" class="numbers">
+<input type="text" id="num2" class="numbers">
+<input type="text" id="num3" class="numbers">
+<input type="text" id="num4" class="numbers">
 <input type="button" id="submit" class ="numbers" value="Guess">
 </form>
 </main>
