making code cleaner

--- a/index.html
+++ b/index.html
@@ -16,23 +16,15 @@
 
 <div class="section1"
 <form>
-<input type="text" id="num1" class="numbers">
+<!-- <input type="text" id="num1" class="numbers">
 <input type="text" id="num2" class="numbers">
 <input type="text" id="num3" class="numbers">
-<input type="text" id="num4" class="numbers">
+<input type="text" id="num4" class="numbers"> -->
 <input type="button" id="submit" class ="numbers" value="Guess">
 </form>
 </main>
 <div class="display">
-<ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-</ul>
+
 </div>
 
 
