some other stuff

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 </head>
 <body>
 <header>
-<h1> Cows & Bulls!</h1>
+<h1>Break Out</h1>
 </header>
 <main>
 <div id="boxes"></div>
+<div class="scores"></div>
+<div class="scoreboard1"></div>
+<div class="scoreboard2"></div>
 
-<div class="section1"
-<form>
-<!-- <input type="text" id="num1" class="numbers">
-<input type="text" id="num2" class="numbers">
-<input type="text" id="num3" class="numbers">
-<input type="text" id="num4" class="numbers"> -->
-<input type="button" id="submit" class ="numbers" value="Guess">
-</form>
+<div class="section1">
+
+<input type="button" id="submit" class="numbers" value="Guess">
+<input type="button" id="reset" class ="numbers" value="Reset">
+
+
 </main>
 <div class="display">
 
