--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Bulls & Cows</title>
-	<link href='http://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
@@ -36,14 +36,14 @@
 					<img src="padlock.png" id="myimage">
 					<div id="boxes"></div>
 
-						<img id="key" src="key.png">
+					<img id="key" src="key.png">
 				</div>
 
 				<div class="section1">
-				<div id="scores" class="scores">
-					<h2>Attempts</h2>
-				</div>
-				<div id="scoreboard1" class="scores">
+					<div id="scores" class="scores">
+						<h2>Attempts</h2>
+					</div>
+					<div id="scoreboard1" class="scores">
 <!-- 	<img src="sineloa.png">
 -->	<h2>Zetas</h2>
 </div>
@@ -54,10 +54,10 @@
 </div>
 
 
-	<input type="button" id="reset" class ="begin" value="Reset">
-	<div id="display">
-		<input type="text" id="display" value="">
-	</div>
+<input type="button" id="reset" class ="begin" value="Reset">
+<div id="display">
+	<input type="text" id="display" value="">
+</div>
 </div>
 
 
